# binned-residuals

./: LICENSE  README.md  pyproject.toml
binned_residuals/: __init__.py  core.py
