[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binned-residuals"
version = "0.1.0"
description = "Binned residual plots for regression diagnostics"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Gustav Antonsson Ljungqvist"}
]
keywords = ["regression", "diagnostics", "residuals", "visualization", "statistics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0"
]

[dependency-groups]
dev = [
    "pytest",
    "ruff"
]

[project.urls]
Homepage = "https://github.com/GLjungqvist/binned-residuals"
Repository = "https://github.com/GLjungqvist/binned-residuals"
Issues = "https://github.com/GLjungqvist/binned-residuals/issues"
Documentation = "https://github.com/GLjungqvist/binned-residuals#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["binned_residuals*"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
